<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MineSeeker</string>
    <string name="solar_panels"> solar panels</string>
    <string name="help_section">Help Section</string>
    <string name="about_the_author">About the author:</string>
    <string name="instructions">Instructions:</string>
    <string name="radiobuttonBoard">RadioButton</string>
    <string name="settings">Settings</string>
    <string name="board_size">Board size:</string>
    <string name="print_selected">Print Selected</string>
    <string name="number_of_mines">Number of mines:</string>
    <string name="radiobuttonMines">RadioButton</string>
    <string name="set_game">Set Game</string>
    <string name="mine_seeker">Mine Seeker</string>
    <string name="made_by_kourosh_azizi">Made by: Kourosh Azizi</string>
    <string name="options">Options</string>
    <string name="help">Help</string>
    <string name="game_screen">Game Screen</string>
    <string name="this_will_be_the_game_screen">This will be the game screen</string>
    <string name="scroll_down_for_more_options">Scroll down for more options.</string>
    <string name="made_by_kourosh_azizi_fred_wu"><![CDATA[Made by: Kourosh Azizi & Fred Wu]]></string>
    <string name="bomb_suad">Bomb Suad</string>
    <string name="made_by_kourosh_azizi_and_fred_wu">Made by: Kourosh Azizi and Fred Wu</string>
    <string name="skip">Skip</string>
    <string name="set_number_of_dragons"><![CDATA[>> Set Number of Dragons:]]></string>
    <string name="highest_score">Highest score:</string>
    <string name="number_of_times_played">Number of times played:</string>
    <string name="best_score">Best score</string>
    <string name="number_of_games">Number of games</string>
    <string name="numofrevealdragon">numOfRevealDragon</string>
    <string name="set_board_size"><![CDATA[>> Set Board Size:]]></string>
    <string name="reset">Reset</string>
    <string name="best_score_user">best score</string>
    <string name="number_of_games_played">number of games</string>
    <string name="num_times_played_and_best_score_hidden">num times played and best score (hidden)</string>
    <string name="dragon_num_dragon_reveale_and_scans_used_hidden">dragon num, dragon reveale, and scans used (hidden)</string>
    <string name="usergameinfotext_hidden">userGameInfoText (hidden)</string>
    <string name="user_game_info_hidden">user game info (hidden)</string>
</resources>
